[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Bow.png" type="Texture" id=1]
[ext_resource path="res://Obstacles/Bowman/Bowman.gd" type="Script" id=2]
[ext_resource path="res://Assets/Bowman.png" type="Texture" id=3]
[ext_resource path="res://Assets/Platform.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 536.493

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "shooting"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shoot"
} ]
}

[node name="Bowman" type="Sprite"]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
hframes = 5
frame = 3
script = ExtResource( 2 )

[node name="Weapon Pivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Weapon Pivot"]
position = Vector2( 5, 0 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="Weapon Offset" type="Position2D" parent="Weapon Pivot"]
position = Vector2( 17, 0 )

[node name="RayCast2D" type="RayCast2D" parent="Weapon Pivot"]
enabled = true
cast_to = Vector2( 400, 0 )
collision_mask = 5

[node name="Detection Zone" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Zone"]
shape = SubResource( 1 )

[node name="FireRate" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Platform" type="Sprite" parent="."]
position = Vector2( 1, 4 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/shooting = SubResource( 3 )

[node name="Bow Animation" type="AnimationPlayer" parent="."]
anims/shoot = SubResource( 4 )
[connection signal="body_entered" from="Detection Zone" to="." method="_on_Detection_Zone_body_entered"]
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
